# keedavault

./: .gitignore  App.tsx  BUILD_SUCCESS.md  CHANGELOG.md  DRAG_BEHAVIOR_FINAL_FIX.md  FIX_SECOND_CLICK_DRAG.md  IMPROVED_DRAG_PREVIEW.md  INSTALLATION_CN.md  MANUAL_FIX_REOPEN.md  MENU_ITEMS_FIX.md  README.md  RELEASE_STATUS.md  SESSION_SUMMARY.md  TAURI_DND_ISSUE.md  TAURI_DND_速查卡.md  TOUCHID_DEBUG_GUIDE.md  TOUCHID_KEYRING_ISSUE.md  WINDOW_CLOSE_BEHAVIOR.md  check_kdbx.ts  check_kdbx_default.ts  clean-keychain.sh  constants.ts  create-dev-cert.sh  index.css  index.html  kdbxweb.d.ts  metadata.json  package-lock.json  package.json  test-path-encoding.js  tsconfig.json  types.ts  vite.config.ts
.agent/: drag-drop-fix.md
components/: AboutModal.tsx  AboutWindow.tsx  CategoryModal.tsx  CategorySelector.tsx  ChangeCredentialsModal.tsx  CreateEntryModal.tsx  DatabaseIntegrityModal.tsx  DatabasePropertiesModal.tsx  DateTimePicker.tsx  DraggableEntryRow.tsx  DropTargetGroupItem.tsx  EntryDetail.tsx  EntryIcon.tsx  EntryList.tsx  ExportModal.tsx  FlowBackground.tsx  GeneratorWindow.tsx  GroupModal.tsx  GroupSelector.tsx  IconSelector.tsx  ImportModal.tsx  LargeTypeModal.tsx  LargeTypeWindow.tsx  Launcher.tsx  MarkdownPreviewWindow.tsx  PasswordGenerator.tsx  PasswordPromptModal.tsx  SettingsWindow.tsx  Sidebar.tsx  ThemeManager.tsx  UpdateModal.tsx  VaultAuthForm.tsx  VaultAuthWindow.tsx  VaultBox.tsx  VaultCreateForm.tsx  VaultUnlockModal.tsx  VaultWorkspace.tsx  WelcomeScreen.tsx
context/: VaultContext.tsx
docs/: APPDATA_PERMISSION_FIX.md  ARCHITECTURE_ANALYSIS.md  ARCHITECTURE_DECISION.md  ARCHITECTURE_INDEX.md  ARCHITECTURE_RESEARCH_SUMMARY.md  BACKUP_CLEANUP_TROUBLESHOOTING.md  BACKUP_COUNT_UPDATE.md  BACKUP_DIRECTORY_FIX.md  BACKUP_MANAGEMENT.md  BACKUP_STORAGE_ANALYSIS.md  BUFFER_ERROR_FIX.md  BUILD_MACOS.md  BUILD_PLATFORMS_UPDATE.md  CHECK_UPDATES_FEATURE.md  CLOUD_STORAGE_BACKUP_ANALYSIS.md  CLOUD_STORAGE_BACKUP_IMPLEMENTATION.md  CONSOLE_LOG_CLEANUP.md  DATABASE_ENCRYPTION_DISPLAY.md  DATABASE_INTEGRITY.md  DATABASE_INTEGRITY_TROUBLESHOOTING.md  DATABASE_PERFORMANCE_OPTIMIZATION.md  DEBUG_BACKUP_CLEANUP.md  DRAG_DROP_ISSUES.md  EMERGENCY_RECOVERY.md  ENCRYPTION_PARAMS_DEBUG.md  EVENT_LISTENER_ERROR_FIX.md  FILE_SYSTEM_ADAPTER.md  FIX_LAUNCHER_TITLEBAR.md  FLASH_ISSUE_FIX.md  IMPROVEMENTS_SUMMARY.md  KEEPASSXC_COMPATIBILITY_FIX.md  KEEPASS_LIBRARY_COMPARISON.md  KPXC_TEST01_PARAMS.md  (+19 more)
src-tauri/: Cargo.toml  Info.plist  build.rs  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json  migrated.json
src-tauri/icons/: icon.icns
src-tauri/src/: biometric.rs  main.rs  native_keychain.rs  native_keychain_modern.rs  secure_storage.rs
(+48 files in other folders)
