[package]
name = "keedavault"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "window-set-cursor-grab", "window-close", "window-maximize", "window-unminimize", "window-hide", "window-set-min-size", "window-create", "window-set-max-size", "window-set-ignore-cursor-events", "window-set-focus", "window-set-skip-taskbar", "window-request-user-attention", "window-minimize", "window-set-fullscreen", "window-print", "window-set-icon", "window-set-cursor-icon", "window-start-dragging", "window-set-size", "window-set-cursor-position", "window-set-decorations", "window-set-cursor-visible", "window-unmaximize", "window-center", "window-set-position", "window-show", "window-set-title", "window-set-resizable", "window-set-always-on-top", "shell-open", "dialog-all", "fs-all"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
