[package]
name = "keedavault"
version = "0.2.3"
description = "A Tauri App"
authors = ["bsdev"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-fs = "2.4.4"
tauri-plugin-shell = "2.3.3"
tauri-plugin-dialog = "2.4.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
tauri-plugin-store = "2"
keyring = "3"

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"
block = "0.1"
cocoa = "0.25"
objc-foundation = "0.1"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[lints.rust]
unexpected_cfgs = "allow"
